Safari input alignment fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,6 +79,7 @@ input, textarea, select {
   border-bottom: 4px solid #646464;
   font-size: 16px;
   border-radius: 0px;
+  align-content: center;
 }
 input:focus-visible, textarea:focus-visible, select:focus-visible {
   border-width: 2px;
